# libeio

./: .gitignore  .gitmodules  license.md  meson.build  readme.md  task
include/eio/: convert  eio  emitters  file_emitter  file_output  formatters  output  string_emitter  types
src/ports/: windows.cpp
tooling/benchmarks/bunchofargs/: eio.cpp  format.cpp  printf.cpp  reference.txt  streams.cpp  string.cpp
tooling/benchmarks/helloworld/: array.cpp  eio.cpp  format.cpp  formatarr.cpp  printf.cpp  streams.cpp  string.cpp  vformat.cpp
tooling/unittests/: meson.build  unittest_FileOutput.cpp  unittest_convert.cpp  unittest_float_formatter.cpp  unittest_generic_formatter.cpp  unittest_int_formatter.cpp  unittest_output.cpp  unittest_string_emitter.cpp
